# StochasticPhysics

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  StoPhysics.cmakecs  StoPhysics.json  _clang-format_backup
Benchmarks/Benchmark_NormalDistribution/: Benchmark_NormalDistribution_Main.cpp  CMakeLists.txt
Benchmarks/Performance_ParticleSimulation/: BM_NeelProblem_F.cpp  BM_NeelProblem_F.h  BM_NoiseVector_F.cpp  BM_NoiseVector_F.h  BM_ParticleSimulation_Main.cpp  CMakeLists.txt  ReadMe.txt  stdafx.cpp  stdafx.h
Particle_Simulation/: CMakeLists.txt  MetaInfo.cmake  legacy_target.cmake
Particle_Simulation/Fields/: ConstantField.h  FieldList.cpp  FieldList.h  Fields.cmake  ForceField.h  InteractionField.h  LissajousField.h  ModulatedSincField.h  RectangularField.h  SequenceField.h  SincField.h  SinusoidalField.h  SinusoidalField.inl  TriangularField.h  ZeroField.h
Particle_Simulation/General/: CommandOptions.cpp  CommandOptions.h  General.cmake  GeneralDefines.h  MathTypes.hpp  Setup.h  SystemIncludes.h
Particle_Simulation/Problems/: BrownAndNeelRelaxation.h  BrownAndNeelRelaxation.inl  BrownAndNeelRelaxationEulerSpherical.h  BrownianMotion.h  NeelRelaxation.h  NeelRelaxationQuaternion.h  NeelRelaxationSpherical.h  Problems.cmake  Problems.h  ProblemsFWD.h
Particle_Simulation/Problems/Anisotropy/: AnisotropyList.cpp  AnisotropyList.h  CubicAnisotropy.h  GeneralAnisotropy.h  MixedAnisotropy.h  UniaxialAnisotropy.h  UniaxialCubicAnisotropy.hpp
Particle_Simulation/Problems/Boundary_Condition/: BoundaryCondition.h
Particle_Simulation/Problems/Definitions/: BrownAndNeelRelaxationEulerSpherical_Definitions.h  BrownAndNeel_Definitions.h  GeneralProblem_Definitions.h  NeelRelaxationQuaternion_Definitions.h  NeelRelaxationSpherical_Definitions.h  NeelRelaxation_Definitions.h
Particle_Simulation/Problems/Helpers/: ParameterCalculatorBrown.h  ParameterCalculatorBrownAndNeel.h  ParameterCalculatorNeel.h  ParticleStateInitializer.h
Particle_Simulation/Properties/: AnisotropyProperties.h  FieldProperties.cpp  FieldProperties.h  FieldPropertiesOld.cpp  FieldPropertiesOld.h  GeneralProperty.hpp  HydrodynamicProperties.cpp  HydrodynamicProperties.h  MagneticProperties.cpp  MagneticProperties.h  ParticleProperties.h  Properties.cmake  SpatialInformation.h  VoxelInformation.h
Particle_Simulation/Properties/Anisotropy/: All.hpp  Anisotropy.hpp  Cubic.hpp  Mixed.hpp  Uniaxial.hpp  UniaxialCubic.hpp
Particle_Simulation/Properties/Fields/: All.hpp  AllFields.hpp  Constant.hpp  Field.hpp  Lissajous.hpp  ModulatedSinc.hpp  Rectangular.hpp  Sequence.hpp  Sinc.hpp  Sinusoidal.hpp  Triangular.hpp  Zero.hpp
Particle_Simulation/Provider/: ParticleProvider.cpp  ParticleProvider.h  PropertyProvider.h  Provider.cmake
Particle_Simulation/Results/: MeanSimulationResult.h  ResultFactory.h  ResultManagerFactory.h  Results.cmake  SimulationResultManager.h  SingleSimulationResult.h
Particle_Simulation/SDEFramework/: DoubleNoiseMatrix.h  GeneralField.h  GeneralSDEProblem.h  NoiseField.h  NoiseField.inl  NoiseField_SIMD.h  NoiseField_SIMD.inl  SDEFramework.cmake
Particle_Simulation/SDEFramework/Solver/: EulerMaruyama.h  EulerMaruyama.inl  EulerMaruyama_Normalized.h  EulerMaruyama_Normalized.inl  Explicit_Strong_1.h  Explicit_Strong_1.inl  GeneralSDESolver.h  GeneralSolver.hpp  Heun_NotConsistent.h  Heun_NotConsistent.inl  Heun_Strong.h  Heun_Strong.inl  Implicit_Midpoint.h  Implicit_Midpoint.inl  Implicit_Midpoint_GSL.h  Implicit_Midpoint_GSL.inl  Implicit_Midpoint_GSL_Derivative_Free.h  (+5 more)
Particle_Simulation/Selectors/: AllSelectors.h  AnisotropySelector.h  BasicSelector.h  BoundarySelector.h  FieldSelector.h  ProblemSelector.h  Selectors.cmake  SolverSelector.h
Particle_Simulation/Settings/: BrownianMotionParameters.h  ParticleSimulationInitSettings.h  ParticleSimulationParameters.h  ParticleSimulationSettings.cpp  ParticleSimulationSettings.h  PhantomSettings.h  ProblemSettings.cpp  ProblemSettings.h  ResultSettings.cpp  ResultSettings.h  Settings.cmake  SimulationManagerSettings.h  SimulationSettings.cpp  SimulationSettings.h  SolverSettings.cpp  SolverSettings.h  SystemMatrixSettings.h  SystemMatrix_SimulationManagerSettings_Factory.h
Particle_Simulation/Simulator/: ISingleParticleSimulator.h  SimulationApplication.cpp  SimulationManager.h  SimulationManagerTraits.h  Simulator.cmake  Simulator.cpp  Simulator.hpp  Simulator_arch.cpp.in  Simulator_arch.hpp.in  Simulator_arch_impl.hpp  SingleParticleSimulator.h
Particle_Simulation/SystemmatrixFileGeneration/: CMakeLists.txt  SysMatFileGen.cpp  SysMatFileGen.h  SysMatFileGen_Input.cpp  SysMatFileGen_Input.h
Particle_Simulation/app/: InputParams.cpp  InputParams.h  SimulationApplicationNew.cpp  StoPhysApp_MultiArch.cpp  StoPhys_arch.cpp.in  StoPhys_arch.hpp.in
Particle_Simulation/arch/: InstructionSets.cpp  InstructionSets.hpp
Particle_Simulation/archive/: archive_preprocessing.cpp  archive_preprocessing.hpp
Particle_Simulation/cmake/: SimulationOptions.cmake
Particle_Simulation/meta/: metainfo.cpp.in  metainfo.hpp  metainfo.in.cpp
Tests/: CMakeLists.txt
Tests/Anisotropy_Test/: Anisotropy_Test.cpp  Anisotropy_Test.h  CMakeLists.txt
Tests/BrownAndNeel_Relaxation_Test/: CMakeLists.txt  Test_BrownAndNeel_Relaxation.cpp  Test_BrownAndNeel_Relaxation.h
Tests/Implicit_Solver_Test/: CMakeLists.txt  Test_Function_1.cpp  Test_Function_1.h  Test_Function_2.cpp  Test_Function_2.h  Test_Function_3.cpp  Test_Function_3.h
Tests/NeelSpherical_BrownEuler_Relaxation_Test/: CMakeLists.txt  Test_NeelSpherical_BrownEuler_Problem.cpp  Test_NeelSpherical_BrownEuler_Problem.h
Tests/Neel_Problem_Test/: CMakeLists.txt  Test_ParamCalc_Neel.cpp  Test_ParamCalc_Neel.h  Test_Problem_Neel.cpp  Test_Problem_Neel.h  Test_Uniaxial_Anisotropy.cpp  Test_Uniaxial_Anisotropy.h
Tests/Neel_Spherical_Test/: CMakeLists.txt  Test_Neel_Spherical_Problem.cpp  Test_Neel_Spherical_Problem.h
Tests/Random_State_Init_Test/: CMakeLists.txt  Random_State_Init_Test.cpp  Random_State_Init_Test.h
(+34 files in other folders)
