cmake_minimum_required (VERSION 3.17 FATAL_ERROR)
set(CMAKE_VERBOSE_MAKEFILE ON) 
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
set(CMAKE_MESSAGE_LOG_LEVEL VERBOSE)
set(PATHSEP ":")
if(CMAKE_HOST_WIN32)
    set(PATHSEP ";")
endif()

if(UNIX)
    if(NOT "$ENV{PATH}" MATCHES "/usr/local/MATLAB" AND NOT Matlab_ROOT_DIR)
        if(EXISTS "/usr/local/MATLAB/R2020a/bin/")
            set(ENV{PATH} "$ENV{PATH}:/usr/local/MATLAB/R2020a/bin/")
        else()
            message(WARNING "Matlab not on PATH and Matlab_ROOT_DIR not set. CMake will probably not able to find Matlab")
        endif()
    else()
        message(STATUS "Matlab on Path")
    endif()
    set(CMAKE_CXX_VISIBILITY_PRESET hidden)
    set(CMAKE_C_VISIBILITY_PRESET hidden)
    string(APPEND CMAKE_C_FLAGS " -fPIC")
    string(APPEND CMAKE_CXX_FLAGS " -fPIC")
    # from https://gitlab.kitware.com/cmake/community/-/wikis/doc/cmake/RPATH-handling
    set(CMAKE_SKIP_BUILD_RPATH FALSE)
    #set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
    if(UNIX AND NOT APPLE)
        set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")
    endif()
endif()

if(VCPKG_MANIFEST_FEATURES)
    set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
    if(VCPKG_MANIFEST_FEATURES MATCHES "tests")
        set(BUILD_TESTING ON CACHE BOOL "" FORCE)
    endif()
    set(BUILD_BENCHMARKS OFF CACHE BOOL "" FORCE)
    if(VCPKG_MANIFEST_FEATURES MATCHES "benchmarks")
        set(BUILD_BENCHMARKS ON CACHE BOOL "" FORCE)
    endif()
endif()

set(VCPKG_MANIFEST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg_manifest")
set(VCPKG_OVERLAY_PORTS "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg-ports")

find_package(VCPKG)
if(NOT CMakeJSON_FOUND)
    find_package(CMakeJSON REQUIRED)
endif()
include(cmake/GeneralOptions.cmake)
include(cmake/load_vcpkg_toolchain.cmake)
include(cmake/Watcher.cmake)
include(cmake/DefaultProjectSettings.cmake)
include(cmake/CompilerOptions.cmake)
include(cmake/StaticAnalyzers.cmake)
include(cmake/Sanitizers.cmake)

# Some GitHub runners have not enough resources to compile this project multithreaded.
if(StoPhys_LIMITED_RESOURCE)
    set_property(GLOBAL APPEND PROPERTY JOB_POOLS one_job=1)
endif()

project("StoPhysics.json")



